[tool.poetry]
name = "djib_python_client"
version = "0.1.0"
description = ""
authors = ["Djuno Devs <devs@djuno.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
